# todo_actix

./: .env  Cargo.toml  README.md  base64.txt  polymorphism.txt
src/: main.rs
src/db/: build_db.rs  credential.rs  mod.rs
src/domain/: mod.rs  source.rs
src/domain/resporitory_interface/: mod.rs  resperror.rs
src/domain/todolist/: list.rs  mod.rs  task.rs  task_date.rs
src/driver/: mod.rs  task_drv.rs  tdlist_drv.rs
src/gateway/: mod.rs  serializer.rs  task_gateway.rs  todo_gateway.rs
src/http/: mod.rs  rest.rs
src/http/config/: mod.rs  task_controller.rs
src/http/error/: mod.rs
src/http/resources/: mod.rs  utils.rs
src/http/resources/task/: handlers.rs
src/http/resources/task/io/: input.rs  output.rs
src/http/resources/todolist/: handlers.rs  mod.rs
src/http/resources/todolist/io/: input.rs  output.rs
src/port/: error.rs  io.rs  mod.rs  todo_serv.rs
src/port/error/: document.txt  mod.rs  variables.rs
src/usecase/: mod.rs
src/usecase/task_usecase/: delete_task.rs  edit_task.rs  make_task.rs  mod.rs  task_finder.rs
src/usecase/todo_usecase/: append_list.rs  create_list.rs  delete_list.rs  join_task_to_list.rs  list_tasks.rs  mod.rs  remove_task.rs  search_list.rs
tests/: factory.rs  injector.rs  mod.rs
