[package]
name = "todo_actix"
version = "0.1.0"
authors = ["lusamreth <lusomreth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
mongodb = "1.0.0"
actix-rt = "1.1.1"
async-trait = "0.1.36"
chrono = {version = "0.4.13",features = ["serde"]}
sodiumoxide = "0.2.6"
sha2 = "0.9.1"
dotenv_codegen = "0.15.0"
serde = "1.0.114"
json = "0.12.4"
dotenv = "0.15.0"
# hex_literal = " "
serde_json = "1.0.57"
futures = "0.3.5"
regex = "1.3.9"
listenfd = "0.3.3"